re-write stuff, day 13 is a MESS

--- a/day13/Cargo.toml
+++ b/day13/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+computer = { path = "../computer" }
+ggez = "0.5"
+num_enum = "0.4.2"
+crossbeam-channel = "0.4"
